--- a/.air.toml
+++ b/.air.toml
@@ -13,7 +13,7 @@ tmp_dir = "tmp"
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
-  include_dir = ["cmd", "views", "pkg","auth","http"]
+  include_dir = ["cmd", "views", "pkg","auth","http","types","services"]
   include_ext = ["go", "html","templ"]
   include_file = []
   kill_delay = "0s"
